--- a/config/config.env
+++ b/config/config.env
@@ -1,7 +1,7 @@
 PORT=5000
 NODE_ENV=development
-MONGO_URI=mongodb://my_user:my_pwd@localhost:27017/ameritec
-CLIENT_URL=http://ameritec.us
+MONGO_URI=mongodb://localhost:27017/ameritec
+CLIENT_URL=http://localhost:3000
 JWT_ACCOUNT_ACTIVATION=Anhkiet101019971997
 JWT_SECRET=3726138716387163
 JWT_RESET_PASSWORD=123456789
