--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "mongoose": "^5.10.14",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "socket.io": "^3.0.3"
+    "socket.io": "^3.0.3",
+    "vn-payments": "^1.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
