--- a/config/config.env
+++ b/config/config.env
@@ -22,4 +22,7 @@ STEP3_NUMBER=819
 STEP4_NUMBER=7390
 STEP5_NUMBER=897216347
 STEP6_NUMBER=34721634891746
-COMMISSION=1042000
+COMMISSION_PACKAGE=1042000
+COMMISSION_PERSON=209790
+PACKAGE_PRICE=3728000
+PERSIONAL_PRICE=932000
