--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "accessKeyId": "AKIA5NXJ7X46P75OQJEI",
-    "secretAccessKey": "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",
+    "accessKeyId": "AKIA5NXJ7X46OVAMKCML",
+    "secretAccessKey": "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",
     "region": "ap-southeast-1"
 }
