--- a/config/config.env
+++ b/config/config.env
@@ -26,3 +26,6 @@ COMMISSION_PACKAGE=1042000
 COMMISSION_PERSON=209790
 PACKAGE_PRICE=3728000
 PERSIONAL_PRICE=932000
+AWS_ACCESS_KEY_ID=AKIA5NXJ7X46OVAMKCML
+AWS_SECRET_ACCESS_KEY=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
+AWS_REGION=us-east-1
