--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "cron": "^1.8.2",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
@@ -28,7 +29,9 @@
     "mongoose": "^5.10.14",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "sharp": "^0.28.1",
     "socket.io": "^3.0.3",
+    "uuid": "^8.3.2",
     "vn-payments": "^1.1.0"
   },
   "devDependencies": {
