--- a/package.json
+++ b/package.json
@@ -15,20 +15,21 @@
     "aws-sdk": "^2.867.0",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
-    "body-parser": "^1.19.0",
-    "cookie-parser": "^1.4.5",
+    "body-parser": "1.19.0",
+    "cookie-parser": "1.4.*",
     "cors": "^2.8.5",
-    "cron": "^1.8.2",
+    "cron": "1.8.*",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
-    "express": "^4.17.1",
-    "express-jwt": "^6.0.0",
+    "express": "4.17.*",
+    "express-jwt": "6.0.*",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
-    "moment": "^2.29.1",
-    "mongoose": "^5.10.14",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.2",
+    "method-override": "3.0.*",
+    "moment": "2.29.*",
+    "mongoose": "5.10.*",
+    "morgan": "1.10.*",
+    "multer": "1.4.*",
     "sharp": "^0.28.1",
     "socket.io": "^3.0.3",
     "uuid": "^8.3.2",
