fix upload file

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "cron": "1.8.*",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
-    "express": "4.17.*",
+    "express": "^4.17.1",
     "express-jwt": "6.0.*",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
