done fix to ameritec

--- a/config/config.env
+++ b/config/config.env
@@ -13,8 +13,6 @@ CLIENT_URL=http://ameritec.us
 JWT_ACCOUNT_ACTIVATION=Anhkiet101019971997
 JWT_SECRET=3726138716387163
 JWT_RESET_PASSWORD=123456789
-EMAIL_FROM=datvo.jobhack@gmail.com
-MAIL_KEY=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
 PLAINTEXT_PASSWORD=hdwauhdiwadhu
 STEP1_NUMBER=9
 STEP2_NUMBER=90
@@ -26,7 +24,6 @@ COMMISSION_PACKAGE=1042000
 COMMISSION_PERSON=209790
 PACKAGE_PRICE=3728000
 PERSIONAL_PRICE=932000
-AWS_ACCESS_KEY_ID=AKIA5NXJ7X46OVAMKCML
-AWS_SECRET_ACCESS_KEY=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
-AWS_REGION=us-east-1
 INVITE_CODE=AMERITEC2021
+AMERITEC_EMAIL=ameritec110919@gmail.com
+AMERITEC_EMAIL_PASS=lerxzjqvfkgxqeys
