--- a/config/config.env
+++ b/config/config.env
@@ -25,5 +25,7 @@ COMMISSION_PERSON=209790
 PACKAGE_PRICE=3728000
 PERSIONAL_PRICE=932000
 INVITE_CODE=AMERITEC2021
-AMERITEC_EMAIL=ameritec110919@gmail.com
-AMERITEC_EMAIL_PASS=lerxzjqvfkgxqeys
+AMERITEC_EMAIL_GG=ameritec110919@gmail.com
+AMERITEC_EMAIL_PASS_GG=lerxzjqvfkgxqeys
+AMERITEC_EMAIL=info@ameritecjsc.com
+AMERITEC_EMAIL_PASS=V32v3mtG9&
