--- a/config/config.env
+++ b/config/config.env
@@ -27,5 +27,5 @@ PERSIONAL_PRICE=932000
 INVITE_CODE=AMERITEC2021
 AMERITEC_EMAIL_GG=ameritec110919@gmail.com
 AMERITEC_EMAIL_PASS_GG=lerxzjqvfkgxqeys
-AMERITEC_EMAIL=aips@ameritecjsc.com
-AMERITEC_EMAIL_PASS=X5hp7E78:5
+AMERITEC_EMAIL=info@ameritecjsc.com
+AMERITEC_EMAIL_PASS=D6r37Na5n:
