--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.16.1",
     "express-jwt": "6.0.*",
+    "global": "^4.4.0",
     "googleapis": "^72.0.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "2.29.*",
@@ -28,7 +29,8 @@
     "morgan": "1.10.*",
     "multer": "1.4.*",
     "nodemailer": "^6.5.0",
-    "vn-payments": "^1.1.0"
+    "vn-payments": "^1.1.0",
+    "yarn": "^1.22.10"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
